# sip-lab

./: .editorconfig  .gitignore  DEV.md  DOC.md  Makefile  README.md  RELEASE_NOTES.md  RUST_MIGRATION.md  TODO  binding.gyp  build_deps.sh  devjournal  gen_prebuilds.sh  index.js  index_napi.js  install.sh  install_bcg729.sh  install_libs.sh  multiple_audio_streams.js  package-lock.json  package.json  runtests
include/: siplab_constants.h
load_test/: load_test_codec.js
research/: README.md  activesock_test.c  research.gyp  test.c.sample
rust/: Cargo.toml
rust/src/: event_templates.rs  id_manager.rs  lib.rs  napi_addon.rs  sip_core.rs  sip_ffi.rs
samples/: 100_calls.js  16_audio_streams.js  16_calls.js  183_session_progress.js  183_session_progress.js.future  call_with_authentication.js  custom_call_id.js  custom_call_id_and_from_tag.js.future  delayed_media.js  four_audio_streams_two_refused.js  four_audio_streams_two_refused.js.future  g729.js  gsm.js  ilbc.js  late_negotiation.js  media_fields.js  mrcp_and_audio.js  mrcp_and_audio.no_rest_between_msgs.js  mrcp_and_audio.simplified_media.js  mrcp_and_audio.switching_order.js  mrcp_and_audio_switching_order.js  multiple_audio_streams.js  options.js  opus.narrowband.js  opus.wideband.js  pcma.js  play_wav_and_speech_recog.bad_transcript.pcmu8000.js  refer.js  refuse_telephone_event.js  register_no_expires.js  register_subscribe.js  reinvite.js  reinvite_and_dtmf.js  reinvite_audio_audio.js  reinvite_with_hold_unhold.js  rtp_and_srtp.js  rtp_and_srtp.rtp_refused.js  rtp_and_srtp.unbalanced_sdp_answer.js.future  (+24 more)
(+72 files in other folders)
