[package]
name = "sip-lab"
version = "1.40.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", features = ["async", "serde-json"] }
napi-derive = "2.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"

[build-dependencies]
napi-build = "2.0.1"
